# PermitMesh

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.agent/: presence.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: conformance-run.yml
.github/workflows/: ci.yml
docs/: CONFORMANCE.md  LAUNCH_CAMPAIGN.md  NORTH_STAR.md  PRIOR_ART.md  PROTOCOL.md  THREAT_MODEL.md  north-star.json
examples/: completion.missing.json  completion.valid.json  conformance-suite.json  contract.valid.json  request.allowed.json  request.denied.json
examples/conformance/: contract.root-readme.json  contract.single-segment-path.json  request.deploy-bound.json  request.dot-segment.json  request.duplicate-action.json  request.exceeded-budgets.json  request.malformed-approvals.json  request.nested-readme.json  request.nested-ref.json  request.nonfinite.json  request.object-action.json  request.precise-overage.json  request.read-no-path.json  request.stale-claim.json  request.stale-fence.json  request.traversal.json  request.unknown-action.json  request.unknown-field.json  request.windows-drive.json  request.windows-short-name.json  request.wrong-channel.json  request.wrong-subject.json
schema/: permitmesh-completion-report.schema.json  permitmesh-conformance-receipt.schema.json  permitmesh-contract.schema.json  permitmesh-request.schema.json
scripts/: clean-room.ps1  demo.ps1
src/permitmesh/: __init__.py  cli.py  conformance.py  policy.py
tests/: test_policy.py
validation/: clean-room-python311.json  clean-room-python313.json  clean-room.json  conformance-local.json  conformance-v020-local.json  permitmesh-demo.json  postlaunch-verification.json  public-launch.json  v0.2.0-release-candidate.json
