[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "permitmesh"
version = "0.1.1"
description = "A portable policy-decision profile for AI agents changing software."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jalen Studio" }]
keywords = ["ai-agents", "authorization", "nostr", "buzz", "policy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
test = ["jsonschema[format]>=4.23,<5"]

[project.scripts]
permitmesh = "permitmesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
